This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

11-Jul-2004 (Lars Duening)  (3.3.572)
  - (comm.c, actions.c) On a too long message or command, print the
       first 200 characters as debugging aid (Bug #0000078).

10-Jul-2004 (Lars Duening)  (3.3.571)
  - (interpret.c) The tracedepth was always increased, but only decreased
       when traceing was active (#0000070)

10-Jul-2004 (Lars Duening)  (3.3.570)
  - (pcre/) PCRE no longer directly changes the EVAL_COST, instead the
       MATCH_LIMIT option is used to limit the execution of backtracking
       expressions. Updated the documentation. (Bug #0000075)

08-Jul-2004 (Lars Duening)  (3.3.569)
  - (pcre/) Upgraded PCRE to version 4.5; however, there is additional work
       to be done as PCRE 4.5 offers additional features (Bug #0000075)

01-Jul-2004 (Lars Duening)  (3.3.568)
  - (doc/efun/previous_object) Corrected to reflect actual behaviour (Bug
       #0000073).
  - (lex.c) The symbol __MAX_MALLOC__ is set to what is actually set
       in the global 'max_malloced' and not just the configuration
       value MAX_MALLLOCED (Bug #0000069).

29-Jun-2004 (Lars Duening)  (3.3.567)
  - (comm.c) Improved the check for input_to() bitflags on an object with
       telnet disabled so that only changes in the mode are warned about.

21-Jun-2004 (Lars Duening)  (3.3.566)
  - (xalloc)  The memory reserves were allocated with xalloc(), but freed
       with mem_free() - not good (reported by Heiko).
  - (mstrings) Corrected a compiler error (thanks, Ralph!)

14-Jun-2004 (Lars Duening)  (3.3.565)
  - (doc/) Corrected a number of German manpages.
  - (comm.c) net_connect() didn't compile with IPv6 (reported by Fini).
  - (mstrings, object.c) Contradicting the documentation, save_object()
       did not strip a trailing '.c' from the given filename (reported by
       Niflheim@Unitopia) (Bug #00000067).
