@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+12-Jul-2004 (Lars Duening)  (3.3.573)
+  - (actions.c) Efun remove_action() didn't check if the sentence under
+       scrutiny is a true verb or a shadow sentence - this caused a crash
+       if a shadow object executed remove_action(1, shadowee) (Bug #0000080).
+
 11-Jul-2004 (Lars Duening)  (3.3.572)
   - (comm.c, actions.c) On a too long message or command, print the
        first 200 characters as debugging aid (Bug #0000078).
